work on battleship